rbac-best-practices-cel/restrict-clusterrole-nodesproxy/e2e/enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-clusterrole-nodesproxy
spec:
  validationFailureAction: Enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
