rbac-best-practices-cel/restrict-clusterrole-nodesproxy/e2e/vap-assert.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: restrict-clusterrole-nodesproxy
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: restrict-clusterrole-nodesproxy
spec:
  failurePolicy: Fail
